<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="select_picture">Select a picture to upload.</string>
    <string name="quantity">Quantity</string>
    <string name="select">Select</string>
    <string name="add_item">Add Item to Inventory</string>
    <string name="item_details">Inventory Item Details</string>
    <string name="increment">Increment</string>
    <string name="item_price">Item Price</string>
    <string name="inventory_is_empty">Inventory is Empty!</string>
    <string name="add_item_instructions">To add an item to the inventory, click the button with the plus symbol on the bottom-right of this screen. Fill in the required information, save the entry, and the item will be added to your inventory. Items can be edited by clicking on their name from the main Inventory list.</string>
    <string name="sale">Sold!</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all">Delete All Entries</string>
    <string name="deleted_all">Deleted ALL Entries</string>
    <string name="successful_entry">Successful addition to Inventory</string>
    <string name="data_error">Error, data not saved</string>
    <string name="data_incomplete">Error, not all details are valid</string>
    <string name="delete_from_inventory">Delete from Inventory</string>
    <string name="save_changes">Save Updates to Inventory</string>
    <string name="order_more">Order More</string>
    <string name="error_deleting">Error occurred while attempting to delete</string>
    <string name="successful_delete">Item was deleted from inventory</string>
    <string name="successful_update">Item was updated</string>
    <string name="quantity_not_negative">Quantity cannot be negative</string>
    <string name="delete_confirmation">Are you sure you want to delete this item from the inventory?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="supplier_email">Supplier Email:</string>
    <string name="select_image">Select Image</string>
    <string name="order_request_for">Order Request for </string>
</resources>
