<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vn0mrky.inventory.AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            android:hint="@string/item_name"/>

        <EditText
            android:id="@+id/input_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            android:hint="@string/item_description"/>

        <RelativeLayout
            android:id="@+id/quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:text="@string/quantity"
                android:textSize="@dimen/medium_large_text"
                android:layout_margin="@dimen/edit_text_margin"/>

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/quantity_label"
                android:layout_alignBaseline="@id/quantity"
                android:text="1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_layout">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:text="@string/item_price"
                android:textSize="@dimen/medium_large_text"/>

            <EditText
                android:id="@+id/price_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:layout_toRightOf="@id/price"
                android:layout_alignBaseline="@id/price"
                android:hint="0.00"
                android:inputType="numberDecimal"/>
        </RelativeLayout>

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_layout"
            android:layout_margin="@dimen/edit_text_margin"
            android:text="@string/add_item"/>
    </LinearLayout>
</RelativeLayout>